--- a/index.html
+++ b/index.html
@@ -1,33 +1,16 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
+<h1>It's my birthday!</h1>
+<h2>on the 12th may</h2>
+<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg" alt="">
+<h3>what to bring:</h3>
+<ul>
+<li>Baloons(I love baloons)</li>
+<li>Cake(I am really good at eating)</li>
+<li>An appetite(There will be a lot of food)</li>
+</ul>
+<h3>This is where you need to go:</h3>
+<a href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">google map link</a>
+<!-- Example image URL -->
+<!-- https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg -->
 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
- <!DOCTYPE html>
- <html lang="en">
- <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PORTFOLIO</title>
- </head>
- <body>
-    <h1>Anmol singh's portfolio</h1>
-    <h2>i'm a web developer</h2>
-    <hr>
-    <a href="../3.4 Birthday Invite Project/index.html"><h1>Birthday invite project</h1></a>
-    <img height="400px" src="../4.3 HTML Porfolio Project/assets/images/birthdayinvite.png" alt="">
-    <hr>
-    <a href="../4.1+Webpages/public/about.html">about</a>
-    <a href="../4.1+Webpages/public/contact.html">contact</a>
- </body>
- </html>
+<!-- Example Google Maps Link -->
+<!-- https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656 -->
